--- a/src/less/style.less
+++ b/src/less/style.less
@@ -17,9 +17,11 @@
 @import "blocks/banner.less";
 @import "blocks/section-title.less";
 @import "blocks/products.less";
+@import "blocks/features-list.less";
 @import "blocks/statistics.less";
 @import "blocks/advantages.less";
 @import "blocks/partnership.less";
+@import "blocks/dotted-list.less";
 @import "blocks/callback.less";
 @import "blocks/callback-form.less";
 @import "blocks/field-text.less";
