--- a/src/less/blocks/banner.less
+++ b/src/less/blocks/banner.less
@@ -1,7 +1,8 @@
 .banner {
   padding-top: 130px;
   padding-bottom: 25px;
-  background: #785f42;
+  background: #785f42 url('../img/banner-bg.jpg') top center no-repeat;
+  background-size: cover;
 
   @media (min-width: @screen-sm) {
     padding-top: 150px;
@@ -10,14 +11,16 @@
   @media (min-width: @screen-md) {
     padding-top: 180px;
     padding-bottom: 35px;
+    background-attachment: fixed;
   }
 
   @media (min-width: @screen-lg) {
     padding-top: 300px;
+    padding-bottom: 40px;
   }
 
   @media (min-width: @screen-xl) {
-    padding-top: 390px;
+    padding-top: 400px;
   }
 
   &__inner {
@@ -30,6 +33,8 @@
     color: #fff;
     font-family: @font-family--titles;
     font-size: 24px;
+    font-weight: 400;
+    line-height: 1.2;
 
     @media (min-width: @screen-sm) {
       width: 80%;
@@ -43,6 +48,7 @@
     }
 
     @media (min-width: @screen-lg) {
+      width: 75%;
       font-size: 46px;
     }
 
@@ -54,6 +60,11 @@
   &__link {
     display: block;
     text-align: right;
+
+    @media (min-width: @screen-xl) {
+      position: relative;
+      right: -20px;
+    }
   }
 
   &__img {
