--- a/src/less/blocks/btn.less
+++ b/src/less/blocks/btn.less
@@ -10,10 +10,23 @@
   border: none;
 
   &--submit {
-    padding: 7px 10px;
+    padding: 4px 10px;
     min-width: 150px;
     background-color: transparent;
     color: @light-green;
-    border: 1px solid @light-green;
+    border: 2px solid @light-green;
+    transition: all 0.3s;
+
+    &:hover,
+    &:active {
+      background-color: @light-green;
+      color: #fff;
+    }
+
+
+    @media (min-width: @screen-lg) {
+      font-size: 26px;
+      min-width: 210px;
+    }
   }
 }
