--- a/src/less/blocks/callback.less
+++ b/src/less/blocks/callback.less
@@ -1,8 +1,14 @@
 .callback {
   padding-top: 20px;
   padding-bottom: 25px;
-  background-color: #6a685a;
+  background: #6a685a url('../img/callback-bg.jpg') top center no-repeat;
+  background-size: cover;
   color: #fff;
+
+  @media (min-width: @screen-xl) {
+    padding-top: 195px;
+    padding-bottom: 185px;
+  }
 
   &__inner {
     .container();
@@ -14,9 +20,11 @@
   }
 
   &__title {
+    line-height: 1.2;
 
     @media (min-width: @screen-lg) {
       text-align: left;
+      margin-bottom: 35px;
     }
   }
 
@@ -27,11 +35,23 @@
     @media (min-width: @screen-lg) {
       width: 50%;
       text-align: left;
+      padding-left: 105px;
+      font-size: 20px;
+      padding-right: 70px;
+      margin-bottom: 0;
+    }
+
+    @media (min-width: @screen-xl) {
+      padding-right: 100px;
     }
 
     p {
       margin-top: 0;
       margin-bottom: 15px;
+
+      @media (min-width: @screen-lg) {
+        margin-bottom: 35px;
+      }
 
       &:last-child {
         margin-bottom: 0;
@@ -41,9 +61,20 @@
 
   &__agreement {
     font-size: 12px;
+
+    @media (min-width: @screen-lg) {
+      font-size: 14px;
+    }
   }
 
   &__link {
     color: @light-green;
+    transition: all 0.3s;
+
+    &:hover,
+    &:active,
+    &:visited {
+      opacity: 0.7;
+    }
   }
 }
