--- a/src/less/blocks/contacts.less
+++ b/src/less/blocks/contacts.less
@@ -1,13 +1,132 @@
 .contacts {
+  position: relative;
   padding-top: 20px;
   padding-bottom: 25px;
   background-color: #fff;
+
+  @media (min-width: @screen-lg) {
+    padding-top: 0;
+    padding-bottom: 0;
+    min-height: 550px;
+  }
 
   &__inner {
     .container();
   }
 
   &__email {
+    display: block;
     color: @color-main;
+    margin-bottom: 25px;
+    transition: all 0.3s;
+
+    &:hover,
+    &:active,
+    &:visited {
+      opacity: 0.7;
+    }
+  }
+
+  &__tabs {
+
+    @media (min-width: @screen-xl) {
+      padding-top: 85px;
+      width: 30%;
+    }
+  }
+
+  &__title {
+
+    @media (min-width: @screen-lg) {
+      text-align: left;
+      margin-bottom: 15px;
+    }
+  }
+
+  &__address {
+    margin-bottom: 23px;
+  }
+
+  &__phone {
+    display: block;
+    line-height: 1.2;
+    font-family: @font-family--titles;
+    font-weight: 400;
+    transition: all 0.3s;
+
+    &:hover,
+    &:active,
+    &:visited {
+      opacity: 0.7;
+    }
+
+    @media (min-width: @screen-xl) {
+      font-size: 36px;
+    }
+  }
+
+  &__map {
+    width: 100%;
+    height: 300px;
+
+    @media (min-width: @screen-lg) {
+      position: absolute !important; // fix for google maps inline styles
+      right: 0;
+      top: 0;
+      bottom: 0;
+      width: 65%;
+      height: 550px;
+    }
+  }
+
+  // Custom styles for ResponsiveTabs plugin
+
+  .r-tabs .r-tabs-tab {
+    margin-right: 35px;
+
+    &:last-child {
+      margin-right: 0;
+    }
+  }
+
+  .r-tabs-anchor {
+    position: relative;
+    display: inline-block;
+    vertical-align: top;
+    font-size: 18px;
+    font-family: @font-family--titles;
+    transition: all 0.3s;
+
+    &:hover,
+    &:active {
+      color: @color-main;
+    }
+
+    @media (min-width: @screen-lg) {
+      font-size: 36px;
+    }
+  }
+
+  .r-tabs-tab.r-tabs-state-active .r-tabs-anchor {
+    color: @color-main;
+
+    &:before {
+      position: absolute;
+      content: '';
+      width: 97%;
+      height: 1px;
+      bottom: 8px;
+      left: 50%;
+      transform: translateX(-50%);
+      border-bottom: 1px dotted @color-main;
+    }
+  }
+
+  .r-tabs .r-tabs-panel {
+    line-height: 1.2;
+
+    @media (min-width: @screen-lg) {
+      padding: 23px 0;
+    }
   }
 }
