--- a/src/less/blocks/field-text.less
+++ b/src/less/blocks/field-text.less
@@ -1,9 +1,19 @@
 .field-text {
   display: block;
   background-color: transparent;
-  border: 1px solid #fff;
+  border: 2px solid #fff;
   color: #fff;
   border-radius: 0;
+  font-family: @font-family--titles;
+  outline: none;
+
+  @media (min-width: @screen-md) {
+    font-size: 20px;
+  }
+
+  @media (min-width: @screen-lg) {
+    font-size: 26px;
+  }
 
   &::placeholder {
     color: #fff;
