--- a/src/less/blocks/language-switch.less
+++ b/src/less/blocks/language-switch.less
@@ -7,11 +7,17 @@
   font-size: 18px;
   margin-left: auto;
   padding: 3px;
+  transition: all 0.3s;
+
+  &:hover {
+    opacity: 0.7;
+  }
 
   @media (min-width: @screen-lg) {
     order: 3;
     margin-left: 0;
     margin-right: 0;
+    font-size: 16px;
   }
 
   @media (min-width: @screen-xl) {
