--- a/src/less/blocks/main-nav.less
+++ b/src/less/blocks/main-nav.less
@@ -8,7 +8,7 @@
     right: 0;
     width: 100%;
     padding: 45px 15px 20px;
-    background-color: @color-secondary;
+    background-color: rgba(0, 173, 29, 0.95);
     z-index: 1000;
   }
 
@@ -65,9 +65,16 @@
     display: block;
     color: #fff;
     font-size: 18px;
+    transition: all 0.3s;
+
+    &:hover,
+    &:active {
+      opacity: 0.7;
+    }
 
     @media (min-width: @screen-lg) {
       padding: 2px 3px;
+      font-size: 16px;
     }
 
     @media (min-width: @screen-xl) {
