--- a/src/less/blocks/page-footer.less
+++ b/src/less/blocks/page-footer.less
@@ -1,6 +1,13 @@
 .page-footer {
+  padding-top: 15px;
+  padding-bottom: 15px;
   background-color: @color-main;
   color: @light-blue;
+
+  @media (min-width: @screen-md) {
+    padding-top: 22px;
+    padding-bottom: 22px;
+  }
 
   &__inner {
     .container();
@@ -14,5 +21,12 @@
 
   &__terms {
     color: @light-blue;
+    transition: all 0.3s;
+
+    &:hover,
+    &:active,
+    &:visited {
+      opacity: 0.7;
+    }
   }
 }
