--- a/src/less/blocks/page-header.less
+++ b/src/less/blocks/page-header.less
@@ -4,6 +4,10 @@
   padding-top: 15px;
   padding-bottom: 15px;
 
+  @media (min-width: @screen-lg) {
+    padding-top: 30px;
+  }
+
   &__inner {
     .container();
     display: flex;
