Add mobile styles for tabs

--- a/src/less/blocks/callback.less
+++ b/src/less/blocks/callback.less
@@ -1,11 +1,11 @@
 .callback {
   padding-top: 20px;
-  padding-bottom: 25px;
+  padding-bottom: 35px;
   background: #6a685a url('../img/callback-bg.jpg') top center no-repeat;
   background-size: cover;
   color: #fff;
 
-  @media (min-width: @screen-xl) {
+  @media (min-width: @screen-lg) {
     padding-top: 195px;
     padding-bottom: 185px;
   }
@@ -35,13 +35,15 @@
     @media (min-width: @screen-lg) {
       width: 50%;
       text-align: left;
-      padding-left: 105px;
-      font-size: 20px;
+      padding-left: 75px;
+      font-size: 18px;
       padding-right: 70px;
       margin-bottom: 0;
     }
 
     @media (min-width: @screen-xl) {
+      font-size: 20px;
+      padding-left: 105px;
       padding-right: 100px;
     }
 
