--- a/src/less/blocks/advantages.less
+++ b/src/less/blocks/advantages.less
@@ -1,6 +1,6 @@
 .advantages {
   padding-top: 20px;
-  padding-bottom: 25px;
+  padding-bottom: 35px;
   background-color: @color-main;
   color: @light-blue;
 
@@ -32,7 +32,7 @@
   }
 
   &__statistics {
-    margin-bottom: 25px;
+    margin-bottom: 40px;
 
     @media (min-width: @screen-md) {
       margin-bottom: 40px;
@@ -52,44 +52,64 @@
   }
 
   &__item {
+    text-align: center;
+    margin-bottom: 25px;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
 
     @media (min-width: @screen-md) {
+      width: 48.5%;
+      margin-right: 3%;
+
+      &:nth-child(2n) {
+        margin-right: 0;
+      }
+    }
+
+    @media (min-width: @screen-lg) {
       display: flex;
       align-items: center;
       width: 48.5%;
       margin-right: 3%;
       margin-bottom: 65px;
       padding-left: 10px;
+      text-align: left;
 
-      &:nth-child(2n) {
-        margin-right: 0;
+      &:last-child {
+        margin-bottom: 65px;
       }
     }
   }
 
   &__img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     width: 100px;
     height: 100px;
-    opacity: 0.2;
-    transition: all 0.5s;
-
-    @media (min-width: @screen-md) {
-      margin-right: 25px;
-    }
+    margin-bottom: 15px;
 
     @media (min-width: @screen-lg) {
-      width: 120px;
-      height: 120px;
+      margin-right: 25px;
+      margin-left: 0;
+      margin-bottom: 0;
     }
 
-    &:hover {
-      opacity: 1;
+    @media (min-width: @screen-xl) {
+      width: 120px;
+      height: 120px;
     }
   }
 
   &__text {
 
     @media (min-width: @screen-md) {
+      width: calc(~"100% - 125px");
+    }
+
+    @media (min-width: @screen-xl) {
       width: calc(~"100% - 145px");
     }
   }
