--- a/src/less/blocks/btn.less
+++ b/src/less/blocks/btn.less
@@ -23,10 +23,16 @@
       color: #fff;
     }
 
+    @media (min-width: @screen-md) {
+      min-width: 210px;
+    }
 
     @media (min-width: @screen-lg) {
+      font-size: 22px;
+    }
+
+    @media (min-width: @screen-xl) {
       font-size: 26px;
-      min-width: 210px;
     }
   }
 }
