--- a/src/less/blocks/contacts.less
+++ b/src/less/blocks/contacts.less
@@ -1,12 +1,15 @@
 .contacts {
   position: relative;
   padding-top: 20px;
-  padding-bottom: 25px;
   background-color: #fff;
 
-  @media (min-width: @screen-lg) {
+  @media (min-width: @screen-md) {
     padding-top: 0;
     padding-bottom: 0;
+    min-height: 400px;
+  }
+
+  @media (min-width: @screen-lg) {
     min-height: 550px;
   }
 
@@ -27,7 +30,12 @@
     }
   }
 
-  &__tabs {
+  &__info {
+
+    @media (min-width: @screen-md) {
+      padding-top: 40px;
+      width: 40%;
+    }
 
     @media (min-width: @screen-xl) {
       padding-top: 85px;
@@ -35,9 +43,16 @@
     }
   }
 
+  &__tabs {
+    @media (max-width: @screen-sm-max) {
+      text-align: center;
+      margin-bottom: 30px;
+    }
+  }
+
   &__title {
 
-    @media (min-width: @screen-lg) {
+    @media (min-width: @screen-md) {
       text-align: left;
       margin-bottom: 15px;
     }
@@ -53,6 +68,7 @@
     font-family: @font-family--titles;
     font-weight: 400;
     transition: all 0.3s;
+    font-size: 22px;
 
     &:hover,
     &:active,
@@ -66,20 +82,35 @@
   }
 
   &__map {
+    position: relative !important; // fix for google maps inline styles
+    max-width: 100%;
     width: 100%;
     height: 300px;
 
-    @media (min-width: @screen-lg) {
+    @media (min-width: @screen-md) {
       position: absolute !important; // fix for google maps inline styles
       right: 0;
       top: 0;
       bottom: 0;
+      width: 58.5%;
+      height: 400px;
+    }
+
+    @media (min-width: @screen-lg) {
       width: 65%;
       height: 550px;
     }
   }
 
   // Custom styles for ResponsiveTabs plugin
+
+  .r-tabs {
+    @media (max-width: @screen-sm-max) {
+      border: 1px solid @color-main;
+      background-color: @color-main;
+      border-radius: 4px;
+    }
+  }
 
   .r-tabs .r-tabs-tab {
     margin-right: 35px;
@@ -91,20 +122,34 @@
 
   .r-tabs-anchor {
     position: relative;
-    display: inline-block;
-    vertical-align: top;
-    font-size: 18px;
+    display: block;
+    font-size: 26px;
     font-family: @font-family--titles;
     transition: all 0.3s;
 
-    &:hover,
-    &:active {
-      color: @color-main;
+
+    @media (max-width: @screen-sm-max) {
+      background-color: @color-main;
+      color: #fff;
+      border-top-right-radius: 4px;
+      border-top-left-radius: 4px;
     }
 
     @media (min-width: @screen-lg) {
+      display: inline-block;
+      vertical-align: top;
       font-size: 36px;
+
+      &:hover,
+      &:active {
+        color: @color-main;
+      }
     }
+  }
+
+  .r-tabs-accordion-title.r-tabs-state-active .r-tabs-anchor {
+    color: @font-color;
+    background-color: #fff;
   }
 
   .r-tabs-tab.r-tabs-state-active .r-tabs-anchor {
@@ -124,9 +169,27 @@
 
   .r-tabs .r-tabs-panel {
     line-height: 1.2;
+    padding: 10px 0;
+
+    @media (max-width: @screen-sm-max) {
+      background-color: #fff;
+      border-bottom-right-radius: 4px;
+      border-bottom-left-radius: 4px;
+    }
 
     @media (min-width: @screen-lg) {
       padding: 23px 0;
+    }
+  }
+
+  /* Accordion responsive breakpoint */
+  @media only screen and (max-width: @screen-sm-max) {
+    .r-tabs .r-tabs-nav {
+      display: none;
+    }
+
+    .r-tabs .r-tabs-accordion-title {
+      display: block;
     }
   }
 }
