--- a/src/less/blocks/dotted-list.less
+++ b/src/less/blocks/dotted-list.less
@@ -3,6 +3,7 @@
   margin-bottom: 0;
   list-style: none;
   padding-left: 0;
+  text-align: left;
 
   &__item {
     position: relative;
@@ -21,13 +22,22 @@
     &:before {
       position: absolute;
       content: '';
-      top: 50%;
+      top: 9px;
       left: 0;
-      transform: translateY(-50%);
-      width: 5px;
-      height: 5px;
+      width: 3px;
+      height: 3px;
       background-color: #fff;
       border-radius: 50%;
+
+      @media (min-width: @screen-lg) {
+        top: 10px;
+        width: 5px;
+        height: 5px;
+      }
+
+      @media (min-width: @screen-xl) {
+        top: 11px;
+      }
     }
   }
 }
