--- a/src/less/blocks/field-text.less
+++ b/src/less/blocks/field-text.less
@@ -12,6 +12,10 @@
   }
 
   @media (min-width: @screen-lg) {
+    font-size: 22px;
+  }
+
+  @media (min-width: @screen-xl) {
     font-size: 26px;
   }
 
