--- a/src/less/blocks/statistics.less
+++ b/src/less/blocks/statistics.less
@@ -4,9 +4,13 @@
     margin-top: 0;
     margin-bottom: 10px;
     font-family: @font-family--titles;
-    font-size: 20px;
+    font-size: 24px;
     text-align: center;
     font-weight: 400;
+
+    @media (min-width: @screen-sm) {
+      font-size: 26px;
+    }
 
     @media (min-width: @screen-md) {
       font-size: 30px;
@@ -20,6 +24,7 @@
   }
 
   &__items {
+
     @media (min-width: @screen-md) {
       display: flex;
       justify-content: space-between;
