--- a/src/less/global.less
+++ b/src/less/global.less
@@ -26,7 +26,7 @@ body {
     font-size: @font-size--medium;
   }
 
-  @media (min-width: @screen-lg) {
+  @media (min-width: @screen-xl) {
     font-size: @font-size;
   }
 }
