--- a/src/less/blocks/partnership.less
+++ b/src/less/blocks/partnership.less
@@ -1,12 +1,13 @@
 .partnership {
   padding-top: 20px;
   padding-bottom: 25px;
-  background-color: #366949;
+  background: #366949 url(../img/partnership-bg-1.jpg) top center no-repeat;
+  background-size: cover;
   color: #fff;
 
   @media (min-width: @screen-md) {
     position: relative;
-    background-color: transparent;
+    background: transparent;
     padding-top: 35px;
   }
 
