--- a/src/less/blocks/main-nav.less
+++ b/src/less/blocks/main-nav.less
@@ -4,12 +4,15 @@
     display: none;
     position: absolute;
     top: 0;
-    left: 0;
     right: 0;
-    width: 100%;
+    width: 50%;
     padding: 45px 15px 20px;
     background-color: rgba(0, 173, 29, 0.95);
     z-index: 1000;
+  }
+
+  @media (max-width: @screen-sm-max) {
+    width: 100%;
   }
 
   @media (min-width: @screen-lg) {
@@ -35,7 +38,7 @@
     margin-top: 0;
     margin-bottom: 0;
 
-    @media (min-width: @screen-md) {
+    @media (min-width: @screen-lg) {
       display: flex;
     }
   }
