--- a/src/less/blocks/page-footer.less
+++ b/src/less/blocks/page-footer.less
@@ -22,6 +22,19 @@
   &__terms {
     color: @light-blue;
     transition: all 0.3s;
+    font-size: 12px;
+
+    @media (min-width: @screen-sm) {
+      font-size: 14px;
+    }
+
+    @media (min-width: @screen-md) {
+      font-size: 16px;
+    }
+
+    @media (min-width: @screen-xl) {
+      font-size: 18px;
+    }
 
     &:hover,
     &:active,
