--- a/src/less/blocks/advantages.less
+++ b/src/less/blocks/advantages.less
@@ -90,6 +90,7 @@
     width: 100px;
     height: 100px;
     margin-bottom: 15px;
+    opacity: 0;
 
     @media (min-width: @screen-lg) {
       margin-right: 25px;
