--- a/src/less/blocks/logo.less
+++ b/src/less/blocks/logo.less
@@ -1,9 +1,11 @@
 .logo {
+  display: flex;
+  align-items: center;
   font-size: 0;
 
   img {
-    width: 60px;
-    height: 48px;
+    width: 170px;
+    height: 26px;
 
     @media (min-width: @screen-xl) {
       width: 335px;
