--- a/src/less/blocks/callback-form.less
+++ b/src/less/blocks/callback-form.less
@@ -21,7 +21,7 @@
     transition: all 0.3s;
 
     &:focus {
-      border: 2px solid @light-green;
+      border: 2px solid #fff;
     }
 
     @media (min-width: @screen-lg) {
