Add success message

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -29,3 +29,4 @@
 @import "blocks/contacts.less";
 @import "blocks/clients.less";
 @import "blocks/page-footer.less";
+@import "blocks/success-message.less";
