--- a/src/less/style.less
+++ b/src/less/style.less
@@ -30,3 +30,4 @@
 @import "blocks/clients.less";
 @import "blocks/page-footer.less";
 @import "blocks/success-message.less";
+@import "blocks/error-page.less";
