--- a/src/less/global.less
+++ b/src/less/global.less
@@ -70,10 +70,10 @@ input[type="submit"] {
 form select.error,
 form textarea.error,
 form input.error {
-  border: 2px solid #fff;
+  border: 2px solid #FF0000;
 
   &:focus {
-    border: 2px solid #fff;
+    border: 2px solid #FF0000;
   }
 
   &::placeholder {
